@startuml
class Index {
  <i>email</i>
  -- other --
  firstName
  lastName
  password
  info
  isAdmin
}

class Module {
  <i>id</i>
  -- FK --
  author
  -- other --
  tested
  summary
}

class Lesson {
  <i>id</i>
  -- FK --
  module
  -- other --
  quized
  content
}

class Rating {
  -- FK --
  <i>rater</i>
  <i>lesson</i>
  -- other --
  stars
}

class Invitation {
  -- FK --
  <i>module</i>
  <i>student</i>
  <i>creator</i>
}

class Enrollment {
  -- FK --
  <i>module</i>
  <i>student</i>
}

class Comment {
  <i>id</i>
  -- FK --
  module
  lesson
  author
  parent
}

class OpenQuestion {
  <i>id</i>
  -- FK --
  module
  -- other --
  question
}

class Answer {
  -- FK --
  <i>student</i>
  <i>questionId</i>
  -- other --
  answer
  comment
  mark
}

class Report {
  <i>id</i>
  -- FK --
  lesson
  module
  author
  -- other --
  issue
}

class Definition {
  -- FK --
  <i>lessonId</i>
  -- other --
  <i>term</i>
  meaning
}

class QuizQuestion {
  -- FK --
  <i>lessonId</i>
  -- other --
  <i>question</i>
  correctAnswer
}

Definition "*" -- Lesson : has <
QuizQuestion "*" -- Lesson : has <
Report "*" -- Lesson : >
Report "*" -- Module : >
Report "*" -- Index : by >
Answer -- Index : by >
Answer -- OpenQuestion : to >
OpenQuestion "*" -- Module : "about content of" >
Comment "*" -- Comment : to >
Comment "*" - Index : makes <
Comment "*" -- Lesson
Enrollment -- Module : in >
Enrollment - Index : of >
Invitation -- Module : to >
Invitation - Index : for >
Rating -- Lesson : of >
Rating "*" - Index : by >
Lesson "*" -- Module : in >
Module "*" -- Index : by >
@enduml
